<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Main action bar -->
    <string name="app_name">Inetech Office Mover 5000</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_thing">Add Thing</string>
    <string name="action_change_floor">Change Carpet</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="company_name">Inetech</string>
    <string name="app_name_without_company">Office Mover 5000</string>

    <!-- Add stuff menu -->
    <string name="action_add_redstapler">Red Stapler</string>
    <string name="action_add_plant2">Plant (Succulent)</string>
    <string name="action_add_plant1">Plant (Shrub)</string>
    <string name="action_add_pingpong">Ping Pong Table</string>
    <string name="action_add_pacman">Pacman Arcade</string>
    <string name="action_add_nerfgun">Nerfgun Pistol</string>
    <string name="action_add_laptop">Laptop</string>
    <string name="action_add_dog_retriever">Dog Retriever</string>
    <string name="action_add_dog_corgi">Dog Corgi</string>
    <string name="action_add_desk">Desk</string>
    <string name="action_add_ballpit">Ballpit</string>
    <string name="action_add_android">Android</string>

    <!-- Edit furniture -->
    <string name="edit_desk_name_description">Edit the name for this desk.</string>
    <string name="edit_desk_name_title">Edit name</string>
    <string name="edit_desk_name_save">Save</string>


    <!-- Furniture manipulation menu -->
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_rotate">Rotate</string>

    <!-- Floor menu -->
    <string name="action_floor_tile">Tile Flooring</string>
    <string name="action_floor_carpet">Casino Carpet</string>
    <string name="action_floor_wood">Hardwood Floor</string>
    <string name="action_floor_grid">Grid Pattern</string>

    <!-- Login -->
    <string name="login_with_google">Login with Google</string>
    <string name="action_floor_none">None</string>
</resources>
